[tool.poetry]
name = "restapi"
version = "0.1.0"
description = ""
authors = ["GronDS <gronsokolov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.1"
pandas = "^1.4.2"
hypercorn = "^0.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
